force-app/main/default/objects/Contact/fields/Sym_Notfy_actionable_update_web__c.field-meta.xml
<CustomField>
    <fullName>Sym_Notfy_actionable_update_web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify of actionable updates on website</label>
    <type>Checkbox</type>
</CustomField>