force-app/main/default/objects/Contact/fields/Sym_Notify_action_updates_text__c.field-meta.xml
<CustomField>
    <fullName>Sym_Notify_action_updates_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify of actionable updates by text</label>
    <type>Checkbox</type>
</CustomField>