force-app/main/default/objects/Contact/fields/Sym_Notify_all_updates_website__c.field-meta.xml
<CustomField>
    <fullName>Sym_Notify_all_updates_website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify of all updates through website</label>
    <type>Checkbox</type>
</CustomField>